--- a/linux/i3/config
+++ b/linux/i3/config
@@ -10,10 +10,10 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 
-exec --no-startup-id feh --bg-scale /home/andr3wcr0z/Downloads/Wallpapers/woowoo.jpg
+exec --no-startup-id feh --bg-scale /home/andr3wcr0z/Downloads/Wallpapers/glt_gruvbox.png
 exec --no-startup-id picom
-# exec --no-startup-id picom
 exec --no-startup-id volumeicon
+exec --no-startup-id syncthing
 
 set $mod Mod4
 
@@ -47,21 +47,15 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Shift+Return exec alacritty
-bindsym $mod+Shift+f exec firefox
-bindsym $mod+Shift+p exec pcmanfm
+bindsym $mod+Return exec  LIBGL_ALWAYS_SOFTWARE=1 kitty
 
 # kill focused window
-bindsym $mod+Shift+c kill
+bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+p exec --no-startup-id dmenu_run
+# bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
-bindsym $mod+d exec "rofi -modi drun,run -show drun"
-bindsym $mod+Shift+v exec "rofi -show run"
-bindsym $mod+Tab exec "rofi -show window"
-bindsym $mod+Shift+s exec "flameshot gui"
-bindsym $mod+v exec "emacsclient -c -a 'emacs'"
+bindsym Print exec "flameshot gui"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
@@ -109,6 +103,8 @@ bindsym $mod+Shift+space floating toggle
 
 # change focus between tiling / floating windows
 bindsym $mod+space focus mode_toggle
+# rofi thing
+bindsym $mod+z exec rofi -show run -lines 20 -eh 1.3 -opacity "85" -bw 0 -font "System San Francisco Display 10"
 
 # focus the parent container
 bindsym $mod+a focus parent
@@ -154,11 +150,11 @@ bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
 # reload the configuration file
-bindsym $mod+Shift+semicolon reload
+bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+q exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -185,15 +181,26 @@ mode "resize" {
         bindsym $mod+r mode "default"
 }
 
+exec --no-startup-id i3-msg 'workspace 1:Web; exec firefox'
+bindsym Shift+$mod+Pause exec i3lock -c 000000 && systemctl suspend
+bindsym $mod+Pause exec i3lock -c 000000
+bindsym $mod+Insert exec /usr/bin/setxkbmap -option "ctrl:nocaps,altwin:swap_alt_win"
+bindsym $mod+Control+Shift+Tab workspace prev
+
+# application rules
+# firefox
+assign [class="Firefox"] → 1
 # borders
 bindsym $mod+r mode "resize"
-for_window [class="^.*"] border pixel 3
+for_window [class="^.*"] border pixel 2
                           # class                 border  backgr. text    indicator child_border
 for_window [class="^.*"] client.focused          #77dd77 #285577 #ffffff #2e9ef4   #285577
 # gaps
-gaps inner 3
+gaps inner 7
 
-gaps outer 3
+gaps outer 2
+
+smart_borders on
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -204,3 +211,4 @@ bar {
 
 # client.focused              #f2d5cf #eebebe #f2d5cf #f2d5cf
 # exec_always ~/.config/polybar/launch.sh &
+exec --no-startup-id /usr/bin/setxkbmap -option "ctrl:nocaps,altwin:swap_alt_win"
